security/kyverno-policies/test-fixtures/secure-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secure-demo
  namespace: autoguard-policy-demo
  labels:
    app.kubernetes.io/name: secure-demo
    app.kubernetes.io/part-of: autoguard-admission-demo
spec:
  automountServiceAccountToken: false
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: app
      image: nginx:1.27-alpine
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - ALL
      resources:
        requests:
          cpu: 10m
          memory: 32Mi
        limits:
          cpu: 100m
          memory: 64Mi
